# tokamak

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  AutoConfig.css  AutoConfig.tsx  Benchmark.css  Benchmark.tsx  Console.tsx  Core.tsx  Dock.tsx  Flux.tsx  Hangar.tsx  Library.tsx  Markdown.tsx  Rail.tsx  ServerBar.css  ServerBar.tsx  Telemetry.css  Telemetry.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: benchmark.rs  chat.rs  estimator.rs  gguf.rs  history.rs  lib.rs  llama.rs  main.rs  scanner.rs  settings.rs  telemetry.rs  tools.rs
