[package]
name = "tokamak"
version = "0.1.0"
description = "Tokamak: a reactor room for local LLMs. Model library, hardware-aware auto-config, measured benchmarks, live telemetry."
authors = ["vamsh <vamsheedharan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tokamak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "5"
thiserror = "1"
nvml-wrapper = "0.12"
sysinfo = "0.39"
ureq = "2"

